First draft for site

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,17 @@
 // Specific CSS for your home-page
+
+.footer {
+  background-color: rgb(200,200,200);
+  padding: 20px;
+  margin-top: auto;
+}
+
+.cover-banner {
+  height: 400px;
+  background-image: url("https://unsplash.com/photos/jLRIsfkWRGo");
+}
+
+.main-box {
+  margin-top: 200px;
+}
+
