--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,14 +7,14 @@
 </div>
 
 <ul>
-  <% @lists.each do |list| %>
-  <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
+  <%# @lists.each do |list| %>
+  <li><%#= link_to list.name, list_path(list) %></li>
+  <%# end %>
 </ul>
 </div>
  -->
 
-<div class="banner mb-3" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1599957015834-02d074874b82?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80);">
+<div class="banner mb-3" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1599957015834-02d074874b82?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80');">
   <div class="container">
     <h1>My Middle Earth Movie Lists</h1>
     <p>Change your life and learn to save amazing middle earth blockbuster hits to handy lists.</p>
