--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,8 @@
-<div class="banner movie-count" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1584213062606-7a1fc728727d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80);">
+<div class="banner movie-count" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= list_background(@list) %>);">
   <div class="container">
     <h1 class= "mb-3"><%= @list.name %></h1>
     <div class="movie-counter btn btn-success"><%= @list.movies.all.count %> Movies</div>
+    <div class="movie-counter btn btn-warning">Avg Rating: <%= @list.rating_average %></div>
   </div>
 </div>
 
